# httpsRequests

./: CMakeLists.txt  LICENSE.md  Readme.md  httpsRequests.h
examples/: CMakeLists.txt  jsonRequest.cpp  simpleRequest.cpp
examples/simpleRequest/: CMakeLists.txt  simpleRequest.cpp
include/: httpsRequests.h
include/openssl/: opensslconf.h
lib/: libcrypto.lib  libcurl.exp  libcurl.lib  libcurl_a.lib  libssl.lib
src/: httpsRequests.cpp
